# cuGWAS-proto

./: CMakeLists.txt  Makefile  README.md  io.c  io.h  jobtest  main.c  make.inc  make.inc.gnu-goto  makefile.vtt  readme  run.sh  vampir_config_chol.txt
inc/: make.inc.icc-mkl  make.inc.mac  make.inc.mkl  make.inc.vt  make.inc.vt.common  make.inc.vt.gcc-mkl  make.inc.vt.icc-mkl
src/: bio.h  bio_chol.c  bio_eigen.c  blas.h  common.c  common.h  driver.c  eigenDec.c  fgls.c  fgls.h  fgls_chol.c  fgls_chol.h  fgls_chol_gpu.c  fgls_chol_gpu.h  fgls_eigen.c  fgls_eigen.h  io.c  io.h  lapack.h  m_traversal_chol.c  m_traversal_chol.h  m_traversal_eigen.c  m_traversal_eigen.h  mod_x_y.c  mod_x_y.h  options.h  preloop.c  t_traversal.c  t_traversal.h  t_traversal_chol.c  t_traversal_chol.h  t_traversal_eigen.c  t_traversal_eigen.h  test_driver.c  timing.c  timing.h  write_h_file.c
src/old/: bio.h  bio_eigen.c  m_traversal_chol.c  m_traversal_chol.h  m_traversal_eigen.h  t_traversal_chol.h
test/: io_startup_test.c  io_startup_test.h  read_blocksize_test.c  read_blocksize_test.h  read_test.c  read_test.h  read_tests.c  read_tests.h  test_framework.c  test_framework.h  write_blocksize_test.c  write_blocksize_test.h  write_test.c  write_test.h  write_tests.c  write_tests.h
test_cases/main/: B_exp.out  H.in  Y.in  dimensions
test_cases/test_XL/: B_exp.out  H.in  Phi.in  Sig.in  XL.in  Y.in  dimensions  input.in
